Fixed the margin of the tile so it would align correctly

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,4 @@
 
-
-
 body {
   background: #222;
 }
@@ -14,7 +12,7 @@ body {
 
 .board svg {
   fill: #000;
-  transition: all 2s cubic-bezier(.16,.88,.77,1.14);
+  transition: all 2.3s cubic-bezier(.16,.88,.63,1.51);
   filter: drop-shadow(0 0 0 #000);
 }
 
@@ -25,7 +23,7 @@ body {
 .tile {
   display: inline-block;
   height: 72px;
-  margin: -2px;
+  margin: 0 0 -6px 0;
   padding: 0;
   overflow: hidden;
   position: relative;
